--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-mongo-sanitize": "^2.0.0",
     "express-session": "^1.17.1",
     "helmet": "^4.1.1",
+    "heroku": "^7.63.0",
     "joi": "^17.2.1",
     "method-override": "^3.0.0",
     "mongoose": "^5.10.4",
